# openleaf

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/api/: client.ts
client/src/components/: ProjectList.tsx
client/src/components/Auth/: LoginForm.tsx  RegisterForm.tsx
client/src/components/Comments/: CommentsPanel.tsx
client/src/components/Editor/: Editor.tsx  EditorTabs.tsx
client/src/components/FileTree/: FileTree.tsx
client/src/components/Layout/: MainLayout.tsx
client/src/components/PDFViewer/: PDFViewer.tsx
client/src/components/Share/: ShareDialog.tsx
client/src/components/common/: ErrorBoundary.tsx  Loading.tsx
client/src/hooks/: useKeyboardShortcuts.ts
client/src/stores/: authStore.ts  commentsStore.ts  editorStore.ts  projectStore.ts  themeStore.ts
client/src/styles/: globals.css
crates/server/: Cargo.toml
crates/server/migrations/: 20240101000000_initial.sql
crates/server/src/: config.rs  error.rs  main.rs
crates/server/src/db/: mod.rs  models.rs
crates/server/src/handlers/: ws.rs
crates/server/src/middleware/: auth.rs
crates/server/src/routes/: auth.rs  comments.rs  compile.rs  files.rs  mod.rs  projects.rs
crates/server/src/services/: collab.rs  compiler.rs  mod.rs  storage.rs
docker/: .dockerignore  Dockerfile  Dockerfile.full  docker-compose.yml
